# midway

./: CMakeLists.txt  README.md
midway/: CMakeLists.txt  midway.cpp  midway_osx.cpp  midway_win32.cpp
midway/include/midway/: midway.h
test/: CMakeLists.txt  test.cpp
